Repository database implemented.

--- a/CsharpLabs/DonorApplicationForm/DonorApplicationForm.csproj
+++ b/CsharpLabs/DonorApplicationForm/DonorApplicationForm.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.17134.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -119,9 +119,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DataAccess\BloodBankDbConnection.cs" />
+    <Compile Include="DataAccess\BloodGroupPersistance.cs" />
+    <Compile Include="DataAccess\DonationRepository.cs" />
     <Compile Include="DataAccess\DonationRepositoryMock.cs" />
     <Compile Include="DataAccess\DonorRepository.cs" />
     <Compile Include="DataAccess\DonorRepositoryMock.cs" />
+    <Compile Include="DataAccess\GenderPersistance.cs" />
     <Compile Include="DataAccess\IDonationRepository.cs" />
     <Compile Include="DataAccess\IDonorRepository.cs" />
     <Compile Include="DomainModel\BloodGroup.cs" />
