--- a/CsharpLabs/DonorApplicationForm/DonorApplicationForm.csproj
+++ b/CsharpLabs/DonorApplicationForm/DonorApplicationForm.csproj
@@ -139,19 +139,19 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\AddPersonModels\AddPersonViewModel.cs" />
-    <Compile Include="ViewModels\Common\BloodGroup\BloodGroupOptionalViewModel.cs" />
-    <Compile Include="ViewModels\Common\BloodGroup\BloodGroupPresentationLogic.cs" />
-    <Compile Include="ViewModels\Common\BloodGroup\BloodGroupOptionalSelectionViewModel.cs" />
-    <Compile Include="ViewModels\Common\BloodGroup\BloodGroupRequiredViewModel.cs" />
-    <Compile Include="ViewModels\Common\BloodGroup\BloodGroupRequiredSelectionViewModel.cs" />
+    <Compile Include="ViewModels\Common\BloodGroupModels\BloodGroupOptionalViewModel.cs" />
+    <Compile Include="ViewModels\Common\BloodGroupModels\BloodGroupPresentationLogic.cs" />
+    <Compile Include="ViewModels\Common\BloodGroupModels\BloodGroupOptionalSelectionViewModel.cs" />
+    <Compile Include="ViewModels\Common\BloodGroupModels\BloodGroupRequiredViewModel.cs" />
+    <Compile Include="ViewModels\Common\BloodGroupModels\BloodGroupRequiredSelectionViewModel.cs" />
     <Compile Include="ViewModels\DonorsListModels\Donations\AddDonationViewModel.cs" />
     <Compile Include="ViewModels\DonorsListModels\Donations\DonationListViewModel.cs" />
     <Compile Include="ViewModels\DonorsListModels\Donations\DonationViewModel.cs" />
     <Compile Include="ViewModels\DonorsListModels\DonorsListViewModel.cs" />
-    <Compile Include="ViewModels\Common\Gender\GenderSelectionViewModel.cs" />
+    <Compile Include="ViewModels\Common\GenderModels\GenderSelectionViewModel.cs" />
     <Compile Include="ViewModels\Common\BirthDateViewModel.cs" />
     <Compile Include="ViewModels\ApplicationViewModel.cs" />
-    <Compile Include="ViewModels\Common\Gender\GenderViewModel.cs" />
+    <Compile Include="ViewModels\Common\GenderModels\GenderViewModel.cs" />
     <Compile Include="ViewModels\DonorsListModels\PersonViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
